--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="es"> 
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="Pagina uno">
+        <meta name="author" content="Lucia Mejia">
         <title>Mi primera pagina web</title>
     </head>
     <body>
         <h1>Bienvenidos a mi pagina web</h1>
         <p>
-            Esto es un pagina de prueba
+            Esto es un pagina de prueba <br>
+            las cosas deberian poner
         </p>
     </body>
 </html>
