--- a/Segunda Clase/ejercicios/ejercicio-2/index.html
+++ b/Segunda Clase/ejercicios/ejercicio-2/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <title>compraventa-cafe</title>
         <meta charset="UTF-8">
         <meta name="description" content="Ejercicio2">
         <meta name="author" content="Lucia Mejia">
