arreglando sintaxis <p> mala

--- a/Segunda Clase/ejercicios/ejercicio-2/about.html
+++ b/Segunda Clase/ejercicios/ejercicio-2/about.html
@@ -20,7 +20,7 @@
                 puedes hacerlo através del correo: <strong>compraventa-cafe@cafe.com</strong>
             </p>
             <p>
-                <p>(C) Compraventa de café - 2022</p>
+                (C) Compraventa de café - 2022
             </p>
         </footer>
     </body>
