Comentarios para hacerlo mejor 23/02 12:37

--- a/Segunda Clase/ejercicios/ejercicio-2/about.html
+++ b/Segunda Clase/ejercicios/ejercicio-2/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+         <!--Me falto el titlte en un principio-->
         <title>compraventa-cafe</title>
         <meta charset="UTF-8">
         <meta name="description" content="Ejercicio2">
