--- a/Segunda Clase/ejercicios/ejercicio-2/index.html
+++ b/Segunda Clase/ejercicios/ejercicio-2/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <!--Me falto el titlte en un principio-->
         <title>compraventa-cafe</title>
         <meta charset="UTF-8">
         <meta name="description" content="Ejercicio2">
@@ -9,6 +10,7 @@
     <body>
         <main>
             <header>
+                <!--El header fuera de main-->
                 <h1>Compra venta de café</h1>
                 <p>!Café para programadores y programadoras¡</p>
                 <nav>
@@ -17,6 +19,7 @@
                 </nav>
             </header>
 
+            <!--Ver otras formas para llegar a el mismo resultado-->
             <section>
                 <h2>Café Natural</h2>
                 <p>Me lo quitan de las manos</p>
@@ -37,7 +40,10 @@
                 <p>Jose maria ha sido premiado con un sueldo vitalicio de 1000€ el pasado martes por haber consumido 7 tazas diarias desde que era un crio. A sus 89 años tiene por eslogan que "<em>el que la sigue la consigue</em>" </p>
             </section>
 
+            <!--**************************************-->
+
             <footer>
+                <!--El footer fuera de main-->
                 <p>(C) Compraventa de café - 2022</p>
             </footer>
         </main>
