mas comentarios sobre como mejorar

--- a/Segunda Clase/ejercicios/ejercicio-2/index.html
+++ b/Segunda Clase/ejercicios/ejercicio-2/index.html
@@ -20,6 +20,9 @@
             </header>
 
             <!--Ver otras formas para llegar a el mismo resultado-->
+            <!--Tiene que tener sentido puede haber un section dentro de otro
+            pero no separar todo en  section.
+            -->
             <section>
                 <h2>Café Natural</h2>
                 <p>Me lo quitan de las manos</p>
