Dando formato y comentando mejoras para hacer

--- a/Segunda Clase/ejercicios/ejercicio-2/index.html
+++ b/Segunda Clase/ejercicios/ejercicio-2/index.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <!--Me falto el titlte en un principio-->
-        <title>compraventa-cafe</title>
-        <meta charset="UTF-8">
-        <meta name="description" content="Ejercicio2">
-        <meta name="author" content="Lucia Mejia">
-    </head>
-    <body>
-        <main>
-            <header>
-                <!--El header fuera de main-->
-                <h1>Compra venta de café</h1>
-                <p>!Café para programadores y programadoras¡</p>
-                <nav>
-                    <a href="https://www.nescafe.com/es/">Pagina de Nescafe</a>
-                    <a href="about.html">Sobre nosotros</a>
-                </nav>
-            </header>
 
-            <!--Ver otras formas para llegar a el mismo resultado-->
-            <!--Tiene que tener sentido puede haber un section dentro de otro
+<head>
+    <!--Me falto el titlte en un principio-->
+    <title>compraventa-cafe</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Ejercicio2">
+    <meta name="author" content="Lucia Mejia">
+</head>
+
+<body>
+    <main>
+        <header>
+            <!--El header fuera de main-->
+            <h1>Compra venta de café</h1>
+            <p>!Café para programadores y programadoras¡</p>
+            <nav>
+                <a href="https://www.nescafe.com/es/">Pagina de Nescafe</a>
+                <a href="about.html">Sobre nosotros</a>
+            </nav>
+        </header>
+
+        <!--Ver otras formas para llegar a el mismo resultado-->
+        <!--Tiene que tener sentido puede haber un section dentro de otro
             pero no separar todo en  section.
             -->
-            <section>
-                <h2>Café Natural</h2>
-                <p>Me lo quitan de las manos</p>
-            </section>
+        <section>
+            <h2>Café Natural</h2>
+            <p>Me lo quitan de las manos</p>
+        </section>
 
-            <section>
-                <h2>El café Natural mas selecto para ti</h2>
-                <p>Aqui tienes una lista de cafe que te va a sorprender</p>
-            </section>
+        <section>
+            <h2>El café Natural mas selecto para ti</h2>
+            <p>Aqui tienes una lista de cafe que te va a sorprender</p>
+        </section>
 
-            <section>
-                <h2>Café Mezcla</h2>
-                <p>Mezclado y calentito</p>
-            </section>
+        <section>
+            <h2>Café Mezcla</h2>
+            <p>Mezclado y calentito</p>
+        </section>
 
-            <section>
-                <h2>Premiado con un sueldo Nescafe</h2>
-                <p>Jose maria ha sido premiado con un sueldo vitalicio de 1000€ el pasado martes por haber consumido 7 tazas diarias desde que era un crio. A sus 89 años tiene por eslogan que "<em>el que la sigue la consigue</em>" </p>
-            </section>
+        <section>
+            <h2>Premiado con un sueldo Nescafe</h2>
+            <p>Jose maria ha sido premiado con un sueldo vitalicio de 1000€ el pasado martes por haber consumido 7 tazas
+                diarias desde que era un crio. A sus 89 años tiene por eslogan que "<em>el que la sigue la
+                    consigue</em>" </p>
+        </section>
 
-            <!--**************************************-->
+        <!--**************************************-->
 
-            <footer>
-                <!--El footer fuera de main-->
-                <p>(C) Compraventa de café - 2022</p>
-            </footer>
-        </main>
-    </body>
+        <footer>
+            <!--El footer fuera de main-->
+            <p>(C) Compraventa de café - 2022</p>
+        </footer>
+    </main>
+</body>
+
 </html>
