--- a/tercera clase/Ejercicios/Ejercicio 4/index.html
+++ b/tercera clase/Ejercicios/Ejercicio 4/index.html
@@ -13,7 +13,7 @@
 
     </header>
     <main>
-        <form method="post" action="">
+        <form method="get" action="#">
             <fieldset>
                 <legend>Informacion Personal</legend>
                 <ul>
