--- a/tercera clase/Ejercicios/Ejercicio 4/index.html
+++ b/tercera clase/Ejercicios/Ejercicio 4/index.html
@@ -27,11 +27,12 @@
                     </li>
                     <li>
                         <label for="Url">URL</label>
-                        <input type="url" id="Url" name="TxtUrl" placeholder="Escribe la URL de tu página web personal" />
+                        <input type="url" id="Url" name="TxtUrl"
+                            placeholder="Escribe la URL de tu página web personal" />
                     </li>
                     <li>
                         <label for="fecha">Fecha</label>
-                        <input type="date" id="fecha" name="Txtfecha" /> 
+                        <input type="date" id="fecha" name="Txtfecha" />
                     </li>
                     <li>
                         <label for="hora">Hora</label>
