--- a/tercera clase/Ejercicios/Ejercicio 5/index.html
+++ b/tercera clase/Ejercicios/Ejercicio 5/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Lucia Mejia">
     <title>Mi pagina web</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -20,6 +21,7 @@
     </header>
     <main>
             <section id="pel">
+                <hr>
                 <h3>Mi top 10 peliculas</h3>
                 <ol>
                     <li>El padrino</li>
