act 01/03 17:07 casi completa

--- a/Ejercicios_1/Ejercicio3/index.html
+++ b/Ejercicios_1/Ejercicio3/index.html
@@ -1,9 +1,8 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Ejercicio 3</title>
 </head>
@@ -28,6 +27,7 @@
                 nostrum ut. In aspernatur quod ullam perferendis accusamus sequi mollitia veritatis exercitationem
                 similique, aliquam voluptatem, nihil quas vitae libero.</p>
         </section>
+        <hr class="sep">
         <section id="exp">
             <h2 class="titule">Work Experience</h2>
             <h2 class="jobtitule">Job title Company</h2>
@@ -45,7 +45,7 @@
                 facere repudiandae placeat alias. Saepe, maxime nam, omnis modi fuga dolores nisi magni qui neque,
                 dolorum eum cupiditate!</p>
         </section>
-        
+        <hr class="sep">
         <section id="skill">
             <h2 class="titule">Key Skill</h2>
             <ul>
@@ -57,7 +57,7 @@
                 <li>A Key Skil</li>
             </ul>
         </section>
-        
+        <hr class="sep">
         <section id="educ">
             <h2 class="titule">Educations</h2>
 
@@ -71,7 +71,6 @@
                 officia facere repudiandae placeat alias. Saepe, maxime nam, omnis modi fuga dolores nisi magni qui
                 neque, dolorum eum cupiditate!</p>
         </section>
-    </main>
     </main>
 </body>
 
