--- a/Ejercicios_1/Ejercicio3/index.html
+++ b/Ejercicios_1/Ejercicio3/index.html
@@ -55,6 +55,8 @@
                 <li>A Key Skil</li>
                 <li>A Key Skil</li>
                 <li>A Key Skil</li>
+                <li>A Key Skil</li>
+                <li>A Key Skil</li>
             </ul>
         </section>
         <hr class="sep">
