--- a/Ejercicios_2/Ejercicio7/index.html
+++ b/Ejercicios_2/Ejercicio7/index.html
@@ -107,7 +107,7 @@
     </div>
     <div class="formulario">
         <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, suscipit?</h2>
-        <form action="" method="get">
+        <form action="" method="get" class="formu">
             <label for="name">Nome e apellidos</label>
             <input type="text" name="name" id="name">
             <label for="dir">direccion</label>
