--- a/Clase Javascript/Clase1/index.html
+++ b/Clase Javascript/Clase1/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./Ejercicios/script/Ejercicio-20.js"></script>
+    <script src="./Ejercicios/script/Ejercicio-29.js"></script>
     <title>Clase 1</title>
 </head>
 
 <body>
     <h2>Dia 1</h2>
+
+    <div class="padre">
+        <div class="hijo">
+
+            <p class="bolado"> .repormartch > .Comprar-altas-mar > button </p>
+        </div>
+    </div>
+
 </body>
 
 </html>
