--- a/Clase Javascript/DOM/Ejercicios/Ejercicio_1/index.html
+++ b/Clase Javascript/DOM/Ejercicios/Ejercicio_1/index.html
@@ -21,6 +21,21 @@
         </fieldset>
     </form>
 
+    <fieldset id="datos-user" style="display: none;">
+        <legend>Datos de Usuario</legend>
+        <label for="Nombre">Nombre: </label>
+        <data-Nombre id="Nombre"></data-Nombre><br>
+
+        <label for="Edad">Edad: </label>
+        <data-Edad id="Edad"></data-Edad><br>
+
+        <label for="Genero">Genero: </label>
+        <data-Genero id="Genero">
+            </data-Nombre><br>
+
+
+    </fieldset>
+
 
     <script src="./script/script.js"></script>
 </body>
