--- a/Clase Javascript/DOM/Ejercicios/Ejercicio_Lucia_2/index.html
+++ b/Clase Javascript/DOM/Ejercicios/Ejercicio_Lucia_2/index.html
@@ -43,7 +43,54 @@
                     Alonzo</a></li>
         </ul>
     </div>
-    <div class="inf_2"></div>
+    <div class="inf_2">
+        <div id="formation">
+            <div class="separator">Academy formation</div>
+            <h3>CURSO DE ESPECIALIZACIÓN EN HTML, CSS & JAVA </h3>
+            <h5> Powercoders Academy I 2022</h5>
+            <ul>
+                <li>* Website layout</li>
+                <li>* Website design (HTML/CSS3)</li>
+                <li>* Dynamization of website (Frontend) using javascript</li>
+            </ul>
+            <h3>CURSO AWS RE/START CLOUD COMPUTING</h3>
+            <h5> Cámara de Comercio de Madrid I 2021</h5>
+            <ul>
+                <li>* Configure server AWS EC2</li>
+                <li>* Creation & configuration of routing to servers EC2)</li>
+                <li>* Creation & configuration scripts on AWS Lambda </li>
+            </ul>
+            <h3>TÉCNICO EN INGENIERÍA DE SISTEMAS INFORMÁTICOS</h3>
+            <h5 class="normal"> ITCA-FEPADE I 2015-2017 (El Salvador) </h5>
+            <h3>CISCO NETWORKING ACADEMY-INTRODUCCION A REDES </h3>
+            <h5 class="normal"> CCNA Switching & Routing I 2016 (El Salvador) </h5>
+            <h3>LINUX PROFESSIONAL INSTITUTE</h3>
+            <h5 class="normal"> NDG Linux Essentials I 2016 (El Salvador) </h5>
+            <h3>IT Essentials</h3>
+            <h5 class="normal"> Cisco Networking Academy I 2015 (El Salvador) </h5>
+        </div>
+        <div id="experiencia">
+            <div class="separator">Experience</div>
+            <h3>JUNIOR PROGRAMMER</h3>
+            <h5> Artifact Consulting S.L I 2021 ( Madrid) </h5>
+            <ul>
+                <li>* Configure Sever (Apache Tomcat)</li>
+                <li>* Configure robots on server.</li>
+                <li>* Programming of Backend & Frontend (Using HTML5, Javascript, Jquery, Bootstrap & Java)</li>
+            </ul>
+        </div>
+        <div id="Tecno">
+            <div class="separator">Skill Technology</div>
+            <ul>
+                <li>* Java</li>
+                <li>* MySQL</li>
+                <li>* Bootstrap</li>
+                <li>* HTML5/CSS3</li>
+                <li>* JavaScript</li>
+                <li>* JQuery</li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
