--- a/Clase Javascript/DOM/Ejercicios/Ejercicio_10/index.html
+++ b/Clase Javascript/DOM/Ejercicios/Ejercicio_10/index.html
@@ -29,7 +29,7 @@ https://jonsuh.com/hamburgers/
     </div>
 
     <section>
-        <nav class="navegation hidden">
+        <nav class="navegation">
             <ul>
                 <li>Entrada 1</li>
                 <li>Entrada 2</li>
