--- a/Clase Javascript/DOM/Ejercicios/Ejercicio_15/index.html
+++ b/Clase Javascript/DOM/Ejercicios/Ejercicio_15/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <!--
+
   <header>
     <p>
       Puntuación: <span>0</span>
@@ -54,8 +56,8 @@
       <td></td>
     </tr>
   </table>
-
-  <script src='./script/script.js'></script>
+-->
+  <script src='./script/script-2.js'></script>
 </body>
 
 </html>
