--- a/Clase Javascript/DOM/Ejercicios/Ejercicio_18/index.html
+++ b/Clase Javascript/DOM/Ejercicios/Ejercicio_18/index.html
@@ -65,7 +65,7 @@
     </form>
   </section>
 
-  <script src="./script/script.js"></script>
+  <script src="./script/script2.js"></script>
 </body>
 
 </html>
